fix people para formatting and black background full stretch

--- a/src/scss/common/base.scss
+++ b/src/scss/common/base.scss
@@ -12,30 +12,23 @@ body {
 }
 
 html {
+  background-color: black;
   height: 100%;
 }
 
 div.container {
   margin-top: 15vh;
-  margin-bottom: 10vh;
+  padding-bottom: 10vh;
 }
 
 .fade {
   animation: fadein 1s;
 }
-
-.fade-out {
-  animation: fadeout 2s;
-}
-
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
 }
-@keyframes fadeout {
-  from { opacity: 1; }
-  to   { opacity: 0; }
-}
+
 
 .column {
   p {
