--- a/src/scss/common/fonts.scss
+++ b/src/scss/common/fonts.scss
@@ -4,6 +4,7 @@ $body-font: "Helvetica", sans-serif;
 .page-content {
   p {
     margin-left: 0;
+    color: white;
   }
   a {
     color: white;
